update fisher_phrase_score notebook with more comments

--- a/scripts/notebooks/015_fisher_phrase_score.ipynb
+++ b/scripts/notebooks/015_fisher_phrase_score.ipynb
@@ -16,12 +16,42 @@
     "\n",
     "    I load them from *_data.msgpack\n",
     "\n",
-    "output: phrase contribution list csv with 5 fiedls:\n",
+    "output: \n",
+    "\n",
+    "phrase contribution list csv with 5 fiedls:\n",
     "- phrase: str\n",
     "- num_select: frequency of this phrase contained in prompts of selected images\n",
     "- num_unselect: frequency of this phrase contained in prompts of unselected images\n",
     "- odds_ratio: phrase contribution to selection\n",
     "- p_value: confidence, lower is better"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc9d92b2-6ce5-45a0-ba49-e18d76e2b02f",
+   "metadata": {},
+   "source": [
+    "Approach for Statistics and Analysis:\n",
+    "\n",
+    "Data Preparation: \n",
+    "\n",
+    "- For each prompt, we have two key pieces of information – the prompt itself and the label indicating whether it was selected or not. Divide the data into two groups based on selected and unselected labels.\n",
+    "\n",
+    "- Calculate Frequencies: For each phrase, calculate its frequency in the selected prompts and in the unselected prompts.\n",
+    "\n",
+    "- Fisher's Exact Test: Use Fisher's exact test to assess whether there is a significant difference between the observed events in the two groups. This statistical test is suitable for analyzing 2x2 contingency table data.\n",
+    "\n",
+    "Odds Ratio:\n",
+    "\n",
+    "In statistics, the odds ratio compares the odds of an event occurring in two groups. In this context, the odds ratio represents the ratio of the probability of an event (e.g., the occurrence of a pharse) in the selected prompts to its probability in the unselected prompts.\n",
+    "\n",
+    "An odds ratio greater than 1 indicates that the event is more likely to occur in the selected prompts. If it's less than 1, the event is more likely in the unselected prompts.\n",
+    "\n",
+    "P-value:\n",
+    "\n",
+    "The P-value is used to determine whether the observed differences are likely due to random factors. Under the null hypothesis, a low P-value (typically less than 0.05) provides evidence to reject the null hypothesis, suggesting a significant difference between the two groups.\n",
+    "\n",
+    "A small P-value indicates statistically significant differences, providing sufficient evidence to reject the null hypothesis and suggesting a significant difference between the two groups."
    ]
   },
   {
