--- a/scripts/notebooks/han/037_ensemble.ipynb
+++ b/scripts/notebooks/han/037_ensemble.ipynb
@@ -2,196 +2,355 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "920fa705-6a6c-4849-8a89-82c04199af8e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "class Bins:\n",
-    "\n",
-    "    def __init__(self, start: float, count: int, step: float):\n",
-    "\n",
-    "        assert count > 0 and step > 0\n",
-    "        \n",
-    "        self.thresholds = np.arange(count).astype(float) * step + start\n",
-    "            \n",
-    "        self.start = start\n",
-    "        self.count = count\n",
-    "        self.step = step\n",
-    "        self.end = self.thresholds[-1]\n",
-    "\n",
-    "    def convert(self, X: np.ndarray):\n",
-    "        \"\"\"\n",
-    "        Transform a continuous value X into an N-dimensional vector p based on given thresholds.\n",
-    "        This function handles arrays X of any shape and a 1D array of thresholds.\n",
-    "        \n",
-    "        The transformation is as follows:\n",
-    "        - If x < th0, then p[0] = 1.\n",
-    "        - If x > th(N-1), then p[N-1] = 1.\n",
-    "        - If th[i] < x < th[i+1], then p[i] = (th[i+1] - x) / s and p[i+1] = (x - th[i]) / s,\n",
-    "          where s is the step size (assumed to be constant between thresholds).\n",
-    "        \n",
-    "        The function uses numpy operations to efficiently process the transformation\n",
-    "        without explicit looping.\n",
-    "    \n",
-    "        Parameters:\n",
-    "        - X : ndarray\n",
-    "            An array of any shape containing the continuous values to be transformed.\n",
-    "    \n",
-    "        Returns:\n",
-    "        - p_vectors : ndarray\n",
-    "            An array of shape (..., N) where each \"row\" corresponds to the transformed\n",
-    "            vector for each element in X. Each vector p has the property that sum(p) = 1.\n",
-    "    \n",
-    "        Note:\n",
-    "        This function assumes that the thresholds are equally spaced.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        # Calculate normalized distances for each threshold\n",
-    "        distances = (X[..., None] - self.thresholds) / self.step\n",
-    "        \n",
-    "        # Apply clipping to handle boundary conditions\n",
-    "        distances_clipped = np.clip(distances, -1, 1)\n",
-    "        \n",
-    "        # Calculate p vectors\n",
-    "        p_vectors = np.maximum(0, 1 - np.abs(distances_clipped))\n",
-    "        \n",
-    "        # Ensure sum(p) equals 1 (handling boundary conditions)\n",
-    "        p_vectors /= p_vectors.sum(axis=-1, keepdims=True)\n",
-    "\n",
-    "        return p_vectors\n",
-    "        \n",
-    "    def revert(self, p_vectors: np.ndarray):\n",
-    "    \n",
-    "        \"\"\"\n",
-    "        Revert the transformed p_vectors back to the original continuous values X.\n",
-    "        This function assumes the input p_vectors are obtained from the previous transformation\n",
-    "        and uses the provided thresholds to revert the transformation.\n",
-    "    \n",
-    "        Parameters:\n",
-    "        - p_vectors : ndarray\n",
-    "            An array of shape (..., N) containing transformed vectors, where each vector p\n",
-    "            has the property that sum(p) = 1.\n",
-    "    \n",
-    "        Returns:\n",
-    "        - X_reverted : ndarray\n",
-    "            An array of the original continuous values from which the p_vectors were derived.\n",
-    "            The shape of X_reverted is the same as the shape of p_vectors, except for the last dimension.\n",
-    "    \n",
-    "        Note:\n",
-    "        This function assumes that the thresholds are equally spaced and that the p_vectors\n",
-    "        are correctly formatted (sum to 1 for each vector).\n",
-    "        \"\"\"\n",
-    "    \n",
-    "        # Calculate the weighted sum of the thresholds\n",
-    "        X_reverted = np.sum(p_vectors * self.thresholds, axis=-1)\n",
-    "    \n",
-    "        return X_reverted"
+    "from utility.ensemble.ensemble_helpers import Binning, SigmaScoresWithEntropy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
+   "id": "b83db9aa-ae38-4b73-bdd2-0e57731db783",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = np.random.rand(1000, 16)\n",
+    "model_ids = np.arange(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "dc66f7e2-abcb-4c57-9273-594fa53bfd6c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.4  , 0.467, 0.534, 0.601, 0.668, 0.735, 0.802, 0.869, 0.936,\n",
-       "       1.003])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X = np.arange(10) * 0.067 + 0.4\n",
-    "X"
+    "binning = Binning(start=-2, count=8, step=0.5)\n",
+    "sigma_scores = SigmaScoresWithEntropy(values, binning)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "38d35827-1496-4630-b1f2-dd9f223bb8fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.5, 0.7, 0.9])"
+       "(array([-2. , -1.5, -1. , -0.5,  0. ,  0.5,  1. ,  1.5]), (1000, 8))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bins = Bins(start=0.5, count=3, step=0.2)\n",
-    "bins.thresholds"
+    "binning.thresholds, sigma_scores.p_norm.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "330b62a9-a7d5-41ea-b6be-8336294ef7e8",
+   "execution_count": 5,
+   "id": "0a55c09a-ca28-4254-aff0-883eb41dd5ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sigma_score_mean</th>\n",
+       "      <th>sigma_score_var</th>\n",
+       "      <th>sigma_score_max</th>\n",
+       "      <th>sigma_score_min</th>\n",
+       "      <th>entropy</th>\n",
+       "      <th>n_models</th>\n",
+       "      <th>num_below_start</th>\n",
+       "      <th>num_above_end</th>\n",
+       "      <th>bin_start</th>\n",
+       "      <th>bin_count</th>\n",
+       "      <th>bin_step</th>\n",
+       "      <th>p</th>\n",
+       "      <th>model_ids</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.420715</td>\n",
+       "      <td>0.099620</td>\n",
+       "      <td>0.979599</td>\n",
+       "      <td>0.065617</td>\n",
+       "      <td>1.538741</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;6.041;6.454;3.504;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.607565</td>\n",
+       "      <td>0.064599</td>\n",
+       "      <td>0.983214</td>\n",
+       "      <td>0.166090</td>\n",
+       "      <td>1.359895</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;1.849;8.86;5.291;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.504700</td>\n",
+       "      <td>0.067750</td>\n",
+       "      <td>0.995096</td>\n",
+       "      <td>0.034174</td>\n",
+       "      <td>1.371571</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;3.129;9.592;3.279;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.563963</td>\n",
+       "      <td>0.080065</td>\n",
+       "      <td>0.983233</td>\n",
+       "      <td>0.015707</td>\n",
+       "      <td>1.455260</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;2.826;8.302;4.872;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.525348</td>\n",
+       "      <td>0.087758</td>\n",
+       "      <td>0.991452</td>\n",
+       "      <td>0.035920</td>\n",
+       "      <td>1.517162</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;3.771;7.646;4.583;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>0.479430</td>\n",
+       "      <td>0.080460</td>\n",
+       "      <td>0.889011</td>\n",
+       "      <td>0.005318</td>\n",
+       "      <td>1.475606</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;4.164;8.33;3.506;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>0.599182</td>\n",
+       "      <td>0.059041</td>\n",
+       "      <td>0.916880</td>\n",
+       "      <td>0.115083</td>\n",
+       "      <td>1.366400</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;1.953;8.921;5.127;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>0.499865</td>\n",
+       "      <td>0.054599</td>\n",
+       "      <td>0.969761</td>\n",
+       "      <td>0.152541</td>\n",
+       "      <td>1.332052</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;3.014;9.976;3.01;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>0.526033</td>\n",
+       "      <td>0.088823</td>\n",
+       "      <td>0.951901</td>\n",
+       "      <td>0.037160</td>\n",
+       "      <td>1.513773</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;3.732;7.703;4.565;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>0.484405</td>\n",
+       "      <td>0.079322</td>\n",
+       "      <td>0.971212</td>\n",
+       "      <td>0.022511</td>\n",
+       "      <td>1.464378</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0;0;0;0;3.999;8.501;3.5;0</td>\n",
+       "      <td>0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 13 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[1.   , 0.   , 0.   ],\n",
-       "       [1.   , 0.   , 0.   ],\n",
-       "       [0.83 , 0.17 , 0.   ],\n",
-       "       [0.495, 0.505, 0.   ],\n",
-       "       [0.16 , 0.84 , 0.   ],\n",
-       "       [0.   , 0.825, 0.175],\n",
-       "       [0.   , 0.49 , 0.51 ],\n",
-       "       [0.   , 0.155, 0.845],\n",
-       "       [0.   , 0.   , 1.   ],\n",
-       "       [0.   , 0.   , 1.   ]])"
+       "     sigma_score_mean  sigma_score_var  sigma_score_max  sigma_score_min  \\\n",
+       "0            0.420715         0.099620         0.979599         0.065617   \n",
+       "1            0.607565         0.064599         0.983214         0.166090   \n",
+       "2            0.504700         0.067750         0.995096         0.034174   \n",
+       "3            0.563963         0.080065         0.983233         0.015707   \n",
+       "4            0.525348         0.087758         0.991452         0.035920   \n",
+       "..                ...              ...              ...              ...   \n",
+       "995          0.479430         0.080460         0.889011         0.005318   \n",
+       "996          0.599182         0.059041         0.916880         0.115083   \n",
+       "997          0.499865         0.054599         0.969761         0.152541   \n",
+       "998          0.526033         0.088823         0.951901         0.037160   \n",
+       "999          0.484405         0.079322         0.971212         0.022511   \n",
+       "\n",
+       "      entropy  n_models  num_below_start  num_above_end  bin_start  bin_count  \\\n",
+       "0    1.538741         0                0              0         -2          8   \n",
+       "1    1.359895         0                0              0         -2          8   \n",
+       "2    1.371571         0                0              0         -2          8   \n",
+       "3    1.455260         0                0              0         -2          8   \n",
+       "4    1.517162         0                0              0         -2          8   \n",
+       "..        ...       ...              ...            ...        ...        ...   \n",
+       "995  1.475606         0                0              0         -2          8   \n",
+       "996  1.366400         0                0              0         -2          8   \n",
+       "997  1.332052         0                0              0         -2          8   \n",
+       "998  1.513773         0                0              0         -2          8   \n",
+       "999  1.464378         0                0              0         -2          8   \n",
+       "\n",
+       "     bin_step                            p  \\\n",
+       "0         0.5  0;0;0;0;6.041;6.454;3.504;0   \n",
+       "1         0.5   0;0;0;0;1.849;8.86;5.291;0   \n",
+       "2         0.5  0;0;0;0;3.129;9.592;3.279;0   \n",
+       "3         0.5  0;0;0;0;2.826;8.302;4.872;0   \n",
+       "4         0.5  0;0;0;0;3.771;7.646;4.583;0   \n",
+       "..        ...                          ...   \n",
+       "995       0.5   0;0;0;0;4.164;8.33;3.506;0   \n",
+       "996       0.5  0;0;0;0;1.953;8.921;5.127;0   \n",
+       "997       0.5   0;0;0;0;3.014;9.976;3.01;0   \n",
+       "998       0.5  0;0;0;0;3.732;7.703;4.565;0   \n",
+       "999       0.5    0;0;0;0;3.999;8.501;3.5;0   \n",
+       "\n",
+       "                                 model_ids  \n",
+       "0    0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "1    0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "2    0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "3    0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "4    0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "..                                     ...  \n",
+       "995  0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "996  0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "997  0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "998  0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "999  0;1;2;3;4;5;6;7;8;9;10;11;12;13;14;15  \n",
+       "\n",
+       "[1000 rows x 13 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bins.convert(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a5feea62-f20f-413a-8e1b-abffae82cbe5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.5  , 0.5  , 0.534, 0.601, 0.668, 0.735, 0.802, 0.869, 0.9  ,\n",
-       "       0.9  ])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bins.revert(bins.convert(X))"
+    "csv = sigma_scores.to_dataframe()\n",
+    "csv['model_ids'] = ';'.join(map(str, model_ids))\n",
+    "csv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c03077a-3812-416c-9b72-c7f1660cc8d0",
+   "id": "b54fb88e-4ee6-4983-8d5f-ab5262d93468",
    "metadata": {},
    "outputs": [],
    "source": []
