upload ensemble & acative learning notebook on devbox

--- a/scripts/notebooks/han/013_download_from_minio.ipynb
+++ b/scripts/notebooks/han/013_download_from_minio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "2724f27b-806f-421a-9723-c9d27bdfb491",
    "metadata": {
     "tags": []
@@ -12,26 +12,17 @@
     "import os\n",
     "import sys\n",
     "\n",
+    "import glob\n",
     "import json\n",
     "\n",
-    "from tqdm.auto import tqdm\n",
+    "# from tqdm.auto import tqdm\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ee3710e4-5b41-4027-9fe3-58b54d94d2f6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from minio import Minio\n",
-    "import requests\n",
+    "import time\n",
+    "\n",
     "import msgpack\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -47,21 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "bea01f41-fe89-45f5-b442-2e029b5fed0e",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "ROOT = '../kcg-ml-image-pipeline/output/dataset/'\n",
+    "ROOT = '../dataset/'\n",
     "\n",
     "DATASETs = [\n",
-    "    # 'environmental', \n",
-    "    #'character', \n",
-    "    #'icons', \n",
-    "    # 'mech', \n",
-    "    # 'waifu',\n",
+    "    'environmental', \n",
+    "    'character', \n",
+    "    'icons', \n",
+    "    'mech', \n",
+    "    'waifu',\n",
     "    'propaganda-poster'\n",
     "]"
    ]
@@ -75,7 +66,8 @@
    },
    "outputs": [],
    "source": [
-    "MINIO_ADDRESS = \"123.176.98.90:9000\"\n",
+    "# MINIO_ADDRESS = \"123.176.98.90:9000\"\n",
+    "MINIO_ADDRESS = \"192.168.3.5:9000\"\n",
     "access_key = \"GXvqLWtthELCaROPITOG\"\n",
     "secret_key = \"DmlKgey5u0DnMHP30Vg7rkLT0NNbNIGaM8IwPckD\"\n",
     "bucket_name = 'datasets'"
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "c744c2df-88d4-4875-bd0d-eb8d46a53ebe",
    "metadata": {
     "tags": []
@@ -146,10 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6fc4349a-c2ec-4366-ab18-ed33816de15a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                         \r"
+     ]
+    }
+   ],
    "source": [
     "for dataset_name in DATASETs:\n",
     "    download_rank_data(dataset_name)"
@@ -157,7 +157,159 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ac2fb53-9543-4e24-b152-6bb05905a8c2",
+   "id": "45445d45-2556-4216-b9da-da6b169e6a84",
+   "metadata": {},
+   "source": [
+    "# from rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6bb2d8ad-cd42-4483-b8af-cdbd185fc9e4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def download_ranked_data(dataset_name):\n",
+    "\n",
+    "    file_paths = set()\n",
+    "    \n",
+    "    for fname in os.listdir(os.path.join(ROOT, 'ranking', dataset_name)):\n",
+    "        \n",
+    "        info = json.load(open(os.path.join(ROOT, 'ranking', dataset_name, fname)))\n",
+    "        \n",
+    "        image_path_1 = info['image_1_metadata']['file_path']\n",
+    "        \n",
+    "        file_paths.add(image_path_1)\n",
+    "        \n",
+    "        image_path_2 = info['image_2_metadata']['file_path']\n",
+    "            \n",
+    "        file_paths.add(image_path_2)\n",
+    "    \n",
+    "    for file_name in tqdm(file_paths, leave=False):\n",
+    "            \n",
+    "        # output_path = file_name.replace('.jpg', '_clip.msgpack').replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'clip/{dataset_name}/'))\n",
+    "        # file_name = file_name.replace('.jpg', '_clip.msgpack').replace('datasets/', '')\n",
+    "            \n",
+    "        output_path = file_name.replace('.jpg', '_data.msgpack').replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'data/{dataset_name}/'))\n",
+    "        file_name = file_name.replace('.jpg', '_data.msgpack').replace('datasets/', '')\n",
+    "            \n",
+    "        # output_path = file_name.replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'image/{dataset_name}/'))\n",
+    "        # file_name = file_name.replace('datasets/', '')\n",
+    "\n",
+    "        if os.path.exists(output_path):\n",
+    "            continue\n",
+    "        \n",
+    "        try:\n",
+    "            client.fget_object(bucket_name, file_name, output_path)\n",
+    "        except KeyboardInterrupt:\n",
+    "            break\n",
+    "        except:\n",
+    "            continue\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b0637410-6323-4aa0-8356-2b5585aa2439",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                         \r"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset_name in DATASETs:\n",
+    "    download_ranked_data(dataset_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b9007fe-8e5d-4fe2-8b4b-d0191009d011",
+   "metadata": {},
+   "source": [
+    "# save json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3f78ba4e-47b0-4611-8d31-70ef5d8f3f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_json(dataset_name):\n",
+    "\n",
+    "    paths = sorted(glob.glob(os.path.join(ROOT, 'data', dataset_name, '**/*_data.msgpack')))\n",
+    "    \n",
+    "    job_uuids = list()\n",
+    "    file_paths = list()\n",
+    "    file_hashs = list()\n",
+    "    positive_prompts = list()\n",
+    "    negative_prompts = list()\n",
+    "    creation_times = list()\n",
+    "    for path in tqdm(paths, leave=False):\n",
+    "    \n",
+    "        if not os.path.exists(path.replace('_data.msgpack', '_clip.msgpack').replace('/data/', '/clip/')):\n",
+    "            continue\n",
+    "    \n",
+    "        with open(path, 'rb') as f:\n",
+    "            mp = msgpack.load(f)\n",
+    "        \n",
+    "        job_uuids.append(mp['job_uuid'])\n",
+    "        file_paths.append(mp['file_path'])\n",
+    "        file_hashs.append(mp['file_hash'])\n",
+    "        positive_prompts.append(mp['positive_prompt'])\n",
+    "        negative_prompts.append(mp['negative_prompt'])\n",
+    "        creation_times.append(mp['creation_time'])\n",
+    "    \n",
+    "    os.makedirs(os.path.join('data', dataset_name), exist_ok=True)\n",
+    "\n",
+    "    df = pd.DataFrame(\n",
+    "        zip(file_paths, creation_times, job_uuids, positive_prompts, negative_prompts, file_hashs), \n",
+    "        columns=['file_path', 'creation_time', 'job_uuid', 'positive_prompt', 'negative_prompt', 'file_hash']\n",
+    "    )\n",
+    "\n",
+    "    df.drop_duplicates(['file_hash'], inplace=True)\n",
+    "    df.set_index('file_hash', inplace=True)\n",
+    "    \n",
+    "    json.dump(\n",
+    "        df.to_dict(orient='index'),\n",
+    "        open(os.path.join('data', dataset_name, 'data.json'), 'w')\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0a462a66-db66-46a1-81e9-4c42e5771850",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                        \r"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset_name in DATASETs:\n",
+    "    save_json(dataset_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd6ac02f-2e0e-45de-8925-c4b11e1edf62",
    "metadata": {},
    "source": [
     "# download whole dataset"
@@ -425,163 +577,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "45445d45-2556-4216-b9da-da6b169e6a84",
-   "metadata": {},
-   "source": [
-    "# from rank"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6bb2d8ad-cd42-4483-b8af-cdbd185fc9e4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def download_ranked_data(dataset_name):\n",
-    "\n",
-    "    file_paths = set()\n",
-    "    \n",
-    "    for fname in os.listdir(os.path.join(ROOT, 'ranking', dataset_name)):\n",
-    "        \n",
-    "        info = json.load(open(os.path.join(ROOT, 'ranking', dataset_name, fname)))\n",
-    "        \n",
-    "        image_path_1 = info['image_1_metadata']['file_path']\n",
-    "        \n",
-    "        file_paths.add(image_path_1)\n",
-    "        \n",
-    "        image_path_2 = info['image_2_metadata']['file_path']\n",
-    "            \n",
-    "        file_paths.add(image_path_2)\n",
-    "    \n",
-    "    for file_name in tqdm(file_paths, leave=False):\n",
-    "            \n",
-    "        # output_path = file_name.replace('.jpg', '_clip.msgpack').replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'clip/{dataset_name}/'))\n",
-    "        # file_name = file_name.replace('.jpg', '_clip.msgpack').replace('datasets/', '')\n",
-    "            \n",
-    "        # output_path = file_name.replace('.jpg', '_data.msgpack').replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'data/{dataset_name}/'))\n",
-    "        # file_name = file_name.replace('.jpg', '_data.msgpack').replace('datasets/', '')\n",
-    "            \n",
-    "        output_path = file_name.replace(f'datasets/{dataset_name}/', os.path.join(ROOT, f'image/{dataset_name}/'))\n",
-    "        file_name = file_name.replace('datasets/', '')\n",
-    "\n",
-    "        if os.path.exists(output_path):\n",
-    "            continue\n",
-    "        \n",
-    "        try:\n",
-    "            client.fget_object(bucket_name, file_name, output_path)\n",
-    "        except KeyboardInterrupt:\n",
-    "            break\n",
-    "        except:\n",
-    "            continue\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b0637410-6323-4aa0-8356-2b5585aa2439",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/48515 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1091 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1970 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2983 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/920 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1059 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "for dataset_name in DATASETs:\n",
-    "    download_ranked_data(dataset_name)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e3e9d99-22e0-4392-9beb-1f7a7139aee5",
+   "id": "743f0605-7924-4a0b-8db9-807225c6b5e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -589,9 +587,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kk",
+   "display_name": "My Environment",
    "language": "python",
-   "name": "kk"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -603,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
